# nutribot

./: .gitignore  README.md  pyproject.toml
nutribot/: bot.py  config.py  utils.py
tests/: test_bot.py  test_utils.py
